separated js into two files

--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -8,8 +8,9 @@
 
 <body>
   <div id="container" style="width: 75%;">
-    <canvas id="canvas"></canvas>
+    <canvas id="chart0"></canvas>
   </div>
   <script src="{{ url_for('static', filename='js/gen_graph.js') }}"></script>
+  <script src="{{ url_for('static', filename='js/main.js') }}"></script>
 </body>
 </html>
