--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -34,3 +34,13 @@
     font-weight: normal;
     font-style: normal;
 }
+
+div#container {
+  width: 80%;
+  margin-left: 10%;
+}
+
+div#hostnameCheckboxes {
+  height: 600px;
+  overflow-y: scroll;
+}
