--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -48,6 +48,14 @@
     justify-content: center;
 }
 
+.center-text {
+    text-align: center;
+}
+
+.full-width {
+    width: 100%;
+}
+
 .hidden {
     display: none;
 }
