--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -11,45 +11,49 @@
 </head>
 
 <body>
-    <div class="header">
+    <div id="header" class="center-text full-width">
         <h1>cProgress</h1>
     </div>
 
-    <div class="today">
-        <div class="inline">
-            <div>
-                <h2>total time</h2>
+    <div id="today" class="full-width">
+        <div class="sub-today inline">
+            <div class="">
+                <h2>time online today</h2>
             </div>
-            <div>
-                <span><h3 id="total-hours">08</h3></span>
-                <span><h3 id="total-minutes">17</h3></span>
+            <div class="center-text">
+                <div class="inline">
+                    <div class="time-part inline"><h3 id="total-hours">08</h3></div>
+                    <div class="time-part inline"><h3 id="total-minutes">17</h3></div>
+                </div>
             </div>
-            <div>
-                <span><h4>hours</h4></span>
-                <span><h4>minutes</h4></span>
+            <div class="center-text">
+                <div class="inline">
+                    <div class="label-part inline"><h4>hours</h4></div>
+                    <div class="label-part inline"><h4>minutes</h4></div>
+                </div>
             </div>
         </div>
-        <div class="inline">
+        <div class="inline sub-today">
             <div>
                 <h2>unproductive time</h2>
             </div>
             <div>
-                <span><h3 id="unprod-hours">03</h3></span>
-                <span><h3 id="unprod-minutes">34</h3></span>
+                <div class="time-part inline"><h3 id="unprod-hours">05</h3></div>
+                <div class="time-part inline"><h3 id="unprod-minutes">54</h3></div>
             </div>
             <div>
-                <span><h4>hours</h4></span>
-                <span><h4>minutes</h4></span>
+                <div class="label-part inline"><h4>hours</h4></div>
+                <div class="label-part inline"><h4>minutes</h4></div>
             </div>
         </div>
-        <div class="inline">
+        <div class="inline sub-today">
             <div>
                 <!-- how the fuck do we make this x% of a circle -->
                 <h3>63%</h3>
             </div>
             <h4>of quota</h4>
         </div>
-        <div class="inline">
+        <div class="inline sub-today">
             <h3>17</h3>
             <h4>day streak</h4>
         </div>
