--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -1,7 +1,7 @@
 h1 {
     font-family: Sinkin-Sans100Thin;
     color: #fff;
-    font-size: 50px;
+    font-size: 30px;
     margin: 0px;
 }
 
@@ -12,45 +12,67 @@ h2 {
 }
 
 h3 {
-    font-family: Sinkin-Sans300Light;
+    font-family: Sinkin-Sans200XLight;
     font-size: 40px;
+    color: #fff;
 }
 
 h4 {
     font-family: Sinkin-Sans300Light;
     font-size: 12px;
+    color: #999;
+}
+
+h5 {
+    font-family: Sinkin-Sans300Light;
+    font-size: 15px;
+    color: #fff;
+}
+
+a h5 {
+    text-decoration: underline;
 }
 
 body {
     /*background-color: #ECF1F4;*/
-    background-color: #eee;
-}
-
-#header {
-    background-color: #286090;
-    height: 100px;
-    padding-top: 20px;
+    background-color: #fff;
 }
 
 /* ~~~ FIRST CARD ~~~ */
-#today {
-    /*background-color: #EFF4F7;*/
-    background-color: #fff;
-    width: 90%;
-    margin: 40px 5%;
-    /*border-style: solid;
-    border-width: 1px;
-    border-color: #000;*/
-    box-shadow: 0px 0px 7px 1px #888888;
-    padding: 0px;
-    height: 200px;
+#card1 {
+    background-color: #2d333c;
+    height: 350px;
+    padding: 10px 20px 20px 20px;
+}
+
+#header {
+    height: 50px;
+    /*line-height: 50px;*/
+    /*text-align: left;*/
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+#title {
+}
+
+#nav {
+    width: 470px;
+    display: flex;
+    align-items: center;
+}
+
+.nav-part {
+    margin: 0px 20px;
 }
 
 .sub-today {
     width: 24.5%; /* for some reason 25% doesnt work -.- */
     margin: 0px;
-    padding: 10px 20px;
-    height: 100%;
+    padding: 40px 20px 10px;
+    height: 270px; /* 350 - 50 - 30*/
+    vertical-align: top;
 }
 
 .time-part {
@@ -61,6 +83,55 @@ body {
 .label-part {
     text-align: center;
     padding: 0px 10px;
+}
+
+.circle-container {
+    width: 110px;
+    height: 110px;
+    margin: 10px auto 0px;
+}
+
+.circle {
+    position: relative;
+    top: 5px;
+    left: 5px;
+    text-align: center;
+    width: 100px;
+    height: 100px;
+    border-radius: 100%;
+    background-color: #2d333c;
+}
+
+.circle-active-border {
+    position: relative;
+    text-align: center;
+    width: 110px;
+    height: 110px;
+    border-radius: 100%;
+    background-color: #31c4e9;
+    margin: 0px;
+
+    /* overwritten by setQuotaPercent in main.js */
+    /*background-image:
+        linear-gradient(91deg, transparent 50%, #A2ECFB 50%),
+        linear-gradient(90deg, #A2ECFB 50%, transparent 50%);*/
+}
+
+.percent {
+    font-family: Sinkin-Sans200XLight;
+    color: #fff;
+    top: 30px;
+    position: relative;
+    font-size: 30px;
+}
+
+.vert-divider {
+    width: 0px;
+    height: 20px;
+    border-width: 0px 1px 0px 0px;
+    border-color: #fff;
+    border-style: solid;
+
 }
 
 
