--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -30,64 +30,66 @@
                 </div>
             </div>
         </div>
-        <div class="sub-today inline">
-            <div class="center-text">
-                <h2>time online today</h2>
-            </div>
-            <div class="center-text">
-                <div class="inline">
-                    <div class="time-part inline"><h3 id="total-hours">08</h3></div>
-                    <div class="time-part inline"><h3 id="total-minutes">17</h3></div>
+        <div id="today">
+            <div class="sub-today inline">
+                <div class="center-text">
+                    <h2>time online today</h2>
                 </div>
-            </div>
-            <div class="center-text">
-                <div class="inline">
-                    <div class="label-part inline"><h4>hours</h4></div>
-                    <div class="label-part inline"><h4>minutes</h4></div>
+                <div class="center-text">
+                    <div class="inline">
+                        <div class="time-part inline"><h3 id="total-hours">08</h3></div>
+                        <div class="time-part inline"><h3 id="total-minutes">17</h3></div>
+                    </div>
                 </div>
-            </div>
-        </div>
-        <!-- <div class="vert-divider inline"></div> -->
-        <div class="sub-today inline">
-            <div class="center-text">
-                <h2>unproductive time today</h2>
-            </div>
-            <div class="center-text">
-                <div class="inline">
-                    <div class="time-part inline"><h3 id="total-hours">05</h3></div>
-                    <div class="time-part inline"><h3 id="total-minutes">54</h3></div>
-                </div>
-            </div>
-            <div class="center-text">
-                <div class="inline">
-                    <div class="label-part inline"><h4>hours</h4></div>
-                    <div class="label-part inline"><h4>minutes</h4></div>
-                </div>
-            </div>
-        </div>
-        <!-- <div class="vert-divider inline"></div> -->
-        <div class="sub-today inline">
-            <div class="circle-container">
-                <div id="quota-percent-border" class="circle-active-border">
-                    <div class="circle">
-                        <span id="quota-percent" class="percent"></span>
+                <div class="center-text">
+                    <div class="inline">
+                        <div class="label-part inline"><h4>hours</h4></div>
+                        <div class="label-part inline"><h4>minutes</h4></div>
                     </div>
                 </div>
             </div>
-            <div class="center-text">
-                <h2>of quota</h2>
+            <!-- <div class="vert-divider inline"></div> -->
+            <div class="sub-today inline">
+                <div class="center-text">
+                    <h2>unproductive time today</h2>
+                </div>
+                <div class="center-text">
+                    <div class="inline">
+                        <div class="time-part inline"><h3 id="total-hours">05</h3></div>
+                        <div class="time-part inline"><h3 id="total-minutes">54</h3></div>
+                    </div>
+                </div>
+                <div class="center-text">
+                    <div class="inline">
+                        <div class="label-part inline"><h4>hours</h4></div>
+                        <div class="label-part inline"><h4>minutes</h4></div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <!-- <div class="vert-divider inline"></div> -->
-        <div class="sub-today inline">
-            <div class="center-text">
-                <h2>streak</h2>
+            <!-- <div class="vert-divider inline"></div> -->
+            <div class="sub-today inline">
+                <div class="circle-container">
+                    <div id="quota-percent-border" class="circle-active-border">
+                        <div class="circle">
+                            <span id="quota-percent" class="percent"></span>
+                        </div>
+                    </div>
+                </div>
+                <div class="center-text">
+                    <h2>of quota</h2>
+                </div>
             </div>
-            <div class="center-text">
-                <h3>18</h3>
-            </div>
-            <div class="center-text">
-                <h4>days</h4>
+            <!-- <div class="vert-divider inline"></div> -->
+            <div class="sub-today inline">
+                <div class="center-text">
+                    <h2>streak</h2>
+                </div>
+                <div class="center-text">
+                    <h3>18</h3>
+                </div>
+                <div class="center-text">
+                    <h4>days</h4>
+                </div>
             </div>
         </div>
     </div>
