--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -39,7 +39,7 @@ body {
 }
 
 /* ~~~ FIRST CARD ~~~ */
-#card1 {
+#card0 {
     background-color: #2d333c;
     height: 350px;
     padding: 10px 20px 20px 20px;
@@ -142,13 +142,16 @@ body {
 
 }
 
-
-
-#container {
-  width: 80%;
-  margin-left: 10%;
+/* ~~~ SECOND CARD ~~~ */
+#card1 {
+  width: 100%;
   text-align: center;
-  padding: 50px 0 100px 0;
+  padding: 50px 5% 100px 5%;
+}
+
+#card1-title {
+    color: #000;
+    font-size: 30px;
 }
 
 #chart1-container {
