--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -3,6 +3,7 @@
 <head>
     <title>Horizontal Bar Chart</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/toastr.min.css') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/graph.css') }}">
     <script src="{{ url_for('static', filename='js/jquery-3.2.1.min.js') }}"></script>
@@ -144,6 +145,7 @@
     </div>
 
     <script src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/toastr.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/util.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bar_graph.js') }}"></script>
     <script src="{{ url_for('static', filename='js/line_graph.js') }}"></script>
