--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -151,7 +151,14 @@ body {
 
 #card1-title {
     color: #000;
-    font-size: 30px;
+    font-size: 40px;
+}
+
+#card1-subtitle {
+    font-family: Sinkin-Sans400Reg;
+    font-size: 16px;
+    color: #000;
+    margin-top: 0px;
 }
 
 #chart0-options label {
@@ -177,7 +184,7 @@ body {
 
 #card2-title {
     color: #000;
-    font-size: 30px;
+    font-size: 40px;
 }
 
 #chart1-container {
