--- a/server/static/css/style.css
+++ b/server/static/css/style.css
@@ -63,3 +63,12 @@
 #toast-container > div {
     opacity:1;
 }
+
+.blur {
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    opacity: 0.5;
+}
