--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -156,6 +156,7 @@
     <script src="{{ url_for('static', filename='js/highcharts.js') }}"></script>
     <script src="{{ url_for('static', filename='js/toastr.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/util.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/data_processing.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bar_graph.js') }}"></script>
     <script src="{{ url_for('static', filename='js/line_graph.js') }}"></script>
     <script src="{{ url_for('static', filename='js/main.js') }}"></script>
