--- a/server/static/css/graph.css
+++ b/server/static/css/graph.css
@@ -36,6 +36,7 @@ a h5 {
 body {
     /*background-color: #ECF1F4;*/
     background-color: #000;
+    height: 100%;
 }
 
 /* ~~~ FIRST CARD ~~~ */
@@ -217,17 +218,40 @@ body {
 
 /* ~~~ SETTINGS DIALOG ~~~ */
 
-#settings-dialog {
-    position: fixed; /* Sit on top of the page content */
-    display: none; /* Hidden by default */
-    width: 50%; /* Full width (cover the whole page) */
-    height: 60%; /* Full height (cover the whole page) */
-    top: 0;
+#settings-container {
+    position: fixed;
+    z-index: 1;
     left: 0;
-    right: 0;
-    bottom: 0;
-    margin: auto;
-    background: white;
-    z-index: 1; /* Specify a stack order in case you're using a different order for other elements */
-    cursor: pointer; /* Add a pointer on hover */
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+#settings-content {
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+}
+
+.cancel-button {
+    background-color: #2d333c;
+    border-style: none;
+    font-family: Sinkin-Sans300Light;
+}
+.cancel-button:hover {
+    background-color: #3b434f;
+}
+
+.save-button {
+    background-color: #31c4e9;
+    border-style: none;
+    font-family: Sinkin-Sans300Light;
+    color: #000;
+}
+.save-button:hover {
+    background-color: #1f7e96;
 }
