--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -13,9 +13,11 @@
 <body>
     <div id="settings-container" class="hidden">
         <div id="settings-content">
-            <p>Some text in the Modal..</p>
-            <button class="btn btn-primary cancel-button">cancel</button>
-            <button class="btn btn-primary save-button">save</button>
+            <h1>Settings</h1>
+            <h2>Quota</h2>
+
+            <button id="settings-cancel" class="btn btn-primary">cancel</button>
+            <button id="settings-save" class="btn btn-primary">save</button>
         </div>
     </div>
     <div id="body-container">
