fixed bug that only happened when utc day != local day

--- a/server/templates/graph.html
+++ b/server/templates/graph.html
@@ -167,6 +167,7 @@
                 <script src="{{ url_for('static', filename='js/util.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/bar_graph.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/line_graph.js') }}"></script>
+                <script src="{{ url_for('static', filename='js/settings.js') }}"></script>
                 <script src="{{ url_for('static', filename='js/main.js') }}"></script>
             </body>
 
